--- a/app/views/lecturers/show.html.erb
+++ b/app/views/lecturers/show.html.erb
@@ -19,8 +19,8 @@
 
 </table>
 <br>
-<p align='center'><%= link_to 'Edit Profile', edit_lecturer_path, class:"button" %>
-    <%= link_to 'New Assignment', new_assignment_path, class:"button" %>
+<p align='center'><%= link_to 'Edit Profile', edit_lecturer_path, class:"ui inverted violet button" %>
+    <%= link_to 'New Assignment', new_assignment_path, class:"ui inverted olive button" %>
 </p>
 <hr>
 <div class="row">
