--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,5 +18,5 @@
         <td> <%= @user.school %></td></tr>
 
 </table>
-<p align='center'><%= link_to 'Edit Profile', edit_user_path, class:"button" %></p> 
+<p align='center'><%= link_to 'Edit Profile', edit_user_path, class:"ui inverted violet button" %></p> 
 
