--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,26 +1,74 @@
-<h1<div data-sticky-container>
-        <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%">
-            <div class="title-bar-left"><%= link_to "Questions",questions_path %></div>
-            <div class="title-bar-right"><%= link_to "Tags", "#" %>  &nbsp; &nbsp; &nbsp; &nbsp;
-                <%= link_to "Ask", new_question_path %> </div>
+<div class="ui horizontal segments">
+    <div class="ui olive segment">
+        <h5>Search here </h5>
+        <%# <h5> <input type="text" id="searchh" placeholder="Search..."></h5> %>
+    </div>
+</div>
+<div class="ui horizontal segments">
+
+    <div class="ui grid">
+        <div class="three  wide column"></div>
+        <div class ="ui list">
+
+            <br>
+            <div class="three  wide column">
+                <li><h3> =>  Stack </h3>  </li>
+                <br>
+                <li><h4><%= link_to "Questions",questions_path %> &nbsp; &nbsp; &nbsp; &nbsp; </h4></li>
+                <br>
+                <li><h4><%= link_to "Tags", "#" %>  &nbsp; &nbsp; &nbsp; &nbsp; </h4></li>
+                <br>
+                <li><h4><%= link_to "Ask", new_question_path %> &nbsp; &nbsp; &nbsp; &nbsp; </h4></li>
+            </div>
+            <div class="three  wide column"></div>
         </div>
     </div>
-    <h1 >Ask</h1>
-<hr>
-<div class="row">
-    <div class= "medium-6">
+    <div class="ui  orange segment">
+        <h1> Ask a Question</h1>
+        <div class="ui form">
+        <br><br>
         <%= form_for(@question) do |f| %>
             <%= render 'shared/errors', object: f.object %>
-            <%= f.label :title %>
-            <%= f.text_field :title %>
-            <%= f.label :body %>
-            <%= f.text_area :body, placeholder: "Enter your question here ...", cols:"100", rows: "10" %>
+            <div class="two fields">
+                <div class="two wide field"></div>
+                <div class="eight wide field">
+                    <%= f.label :title %>
+                    <%= f.text_field :title %>
+                </div>
+            </div>
+            <div class="two fields">
+                <div class="two wide field"></div>
+                <div class="eight wide field">
+                    <%= f.label :body %>
+                    <%= f.text_area :body, placeholder: "Enter your question here ...", cols:"100", rows: "10" %>
+                </div>
+            </div>
+            <div class="two fields">
+                <div class="two wide field"></div>
+                <div class="eight wide field">
 
-            <%= f.label :category %>
-            <%= f.select :category, Question::CAT, {prompt:"Select Category of your question"}%>
-            <%= f.label :tag %>
-            <%= f.text_field :tag, placeholder: "Enter tags here separated by commas" %>
-            <%= f.submit "Post Your Question" ,class: "button"%>
+                    <%= f.label :category %>
+                    <%= f.select :category, Question::CAT, {prompt:"Select Category of your question"}%>
+                </div>
+            </div>
+            <div class="two fields">
+                <div class="two wide field"></div>
+                <div class="eight wide field">
+                    <%= f.label :tag %>
+                    <%= f.text_field :tag, placeholder: "Enter tags here separated by commas" %>
+                </div>
+            </div>
+            <br>
+            <div class="two fields">
+                <div class="two wide field"></div>
+                <div class="eight wide field">
+                    <%= f.submit "Post Your Question" ,class: "ui inverted orange button"%>
+                </div>
+            </div>
         <% end %>
+        </div>
+    </div>
+    <div class="ui yellow segment">
+        <h3 align="center"> Common Tags</h3>
     </div>
 </div>
