--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -16,6 +16,8 @@
 <li><strong> Tags: &nbsp; &nbsp; </strong> <%= @question.tag %> </li>
 <br>
 <br>
+<% if @question.answers.any? %>
 <p><strong> Answers &nbsp; &nbsp; </strong> 
 <li><%= @question.answer %> </li>
+<% end %>
 <%= link_to "Answer" ,edit_question_path , class: "button"%>
