--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,28 +1,16 @@
-<h1<div data-sticky-container>
-        <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%">
-            <div class="title-bar-left"><%= link_to "Questions",questions_path %></div>
-            <div class="title-bar-right"><%= link_to "Tags", "#" %>  &nbsp; &nbsp; &nbsp; &nbsp;
-                <%= link_to "Ask", new_question_path %> </div>
-        </div>
-    </div>
-    <h1 >Answer Here</h1>
-<hr>
-<div class="row">
-    <div class= "medium-6">
+<%= render 'stack/section' %>
+    <h1 >Edit question</h1>
+        <div class="ui form">
+            <br> <br>
         <%= form_for(@question) do |f| %>
-            <%= render 'shared/errors', object: f.object %>
-            <%= f.label :title %>
-            <%= f.text_field :title, :readonly =>true %>
-            <%= f.label :body %>
-            <%= f.text_area :body, placeholder: "Enter your question here ...", cols:"100", rows: "10", :readonly => true %>
-
-            <%= f.label :category %>
-            <%= f.text_field :category, :readonly => true%>
-            <%= f.label :tag %>
-            <%= f.text_field :tag, placeholder: "Enter tags here separated by commas", :readonly => true %>
-            <%= f.label :Answer %>
-            <%= f.text_area :answer, placeholder: "Enter your answer here ...", cols: "100", rows: "10" %>
-            <%= f.submit "Post Your Answer" ,class: "button"%>
+            <%= render 'form', f: f %>
+            <div class="two fields">
+                <div class="two wide field"></div>
+                <div class="eight wide field">
+            <%= f.submit "Update question" ,class: "ui inverted orange button"%>
+            </div>
+            </div>
         <% end %>
     </div>
-</div>
+    </div>
+    <%= render 'stack/tags' %>
