--- a/app/views/shared/_signup.html.erb
+++ b/app/views/shared/_signup.html.erb
@@ -32,7 +32,7 @@
     <div class="one wide field"> </div>
     <div class="three wide field">
     <%= f.label :school %>
-<%= f.select :school, User::SCHOOL, {prompt:'Choose your school'}   %>
+<%= f.select :school, Student::SCHOOL, {prompt:'Choose your school'}   %>
 </div>
 </div>
 <br>
