--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,7 +33,7 @@
     <div class="ui grid">
         <div class="six wide column"> </div>
         <div class="four wide column">
-            <%=link_to "Sign up as Student", new_user_path , class:"ui blue button"%> &nbsp; &nbsp; &nbsp;
+            <%=link_to "Sign up as Student", new_student_path , class:"ui blue button"%> &nbsp; &nbsp; &nbsp;
         </div>
         <div class="five wide column">
             <%=link_to "Sign up as Lecturer", lecturers_new_path , class:"ui green button"%>
