--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -4,7 +4,7 @@
 <hr>
 <br>
 <div class="ui form">
-    <%= form_for(@user) do |f| %>
+    <%= form_for(@student) do |f| %>
         <%= render 'shared/signup', f: f %>
         <div class= "fields">
             <div class="two wide field"> </div>
