--- a/app/views/student_mailer/activate.html.erb
+++ b/app/views/student_mailer/activate.html.erb
@@ -1,4 +1,4 @@
-<h1>Hello,<%= @user.f_name %> </h1>
+<h1>Hello,<%= @student.f_name %> </h1>
 <p>Thank you for Signing up to Shahada <p>
 <p> To activate your account click the link below </p>
-<%=  activate_account_user_url(@user.activation_digest) %>
+<%=  activate_account_student_url(@student.activation_digest) %>
