--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,7 +1,7 @@
 <h1> Student sign up here!!</h1>
 <hr>
 <div class="ui form">
-    <%= form_with model:  @user do |f| %>
+    <%= form_with model:  @student do |f| %>
         <%= render 'shared/signup', f: f %>
         <div class= "fields">
             <div class="two wide field"> </div>
